--- a/LogWindow/BookherWindow.xaml
+++ b/LogWindow/BookherWindow.xaml
@@ -5,11 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LogWindow"
         mc:Ignorable="d"
-        Title="Бухгалтер" Height="370.732" Width="354.878" Background="#FF76E383" FontFamily="Comic Sans MS">
+        Title="Бухгалтер" Height="370.732" Width="354.878" Background="#FF76E383" FontFamily="Comic Sans MS" Closing="Window_Closing">
     <Grid>
         <Label x:Name="nameUser" Content="" HorizontalAlignment="Left" Margin="173,23,0,0" VerticalAlignment="Top" Width="134" Background="White"/>
-        <Label x:Name="surnameUser" Content="" HorizontalAlignment="Left" Margin="173,64,0,0" VerticalAlignment="Top" Width="134" Background="White"/>
-        <Label x:Name="workPost" Content="Бухгалтер" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="200,113,0,0" Width="73" Background="White"/>
+        <Label x:Name="workPost" Content="Бухгалтер" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="202,55,0,0" Width="73" Background="White"/>
         <Button x:Name="create" Content="Сформировать счет" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,245,0,0" Height="35"/>
         <Button x:Name="openReport" Content="Посмотреть отчет" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,285,0,0" Height="35"/>
     </Grid>
