--- a/LogWindow/Captcha.xaml
+++ b/LogWindow/Captcha.xaml
@@ -10,7 +10,7 @@
         <Image x:Name="captchaImage" HorizontalAlignment="Left" Height="196" Margin="0,10,0,0" VerticalAlignment="Top" Width="313"/>
         <Button x:Name="ok" Content="Button" HorizontalAlignment="Left" Margin="64,297,0,0" VerticalAlignment="Top" Width="151" Height="41" Click="ok_Click"/>
         <TextBox x:Name="captchaBox" HorizontalAlignment="Left" Height="36" Margin="10,232,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="229"/>
-        <Image x:Name="refreshCapt" HorizontalAlignment="Left" Height="36" Margin="259,232,0,0" VerticalAlignment="Top" Width="41" MouseLeftButtonUp="refreshCapt_MouseLeftButtonUp" Source="pack://siteoforigin:,,,/Resources/loader.gif"/>
+        <Image x:Name="refreshCapt" HorizontalAlignment="Left" Height="36" Margin="259,232,0,0" VerticalAlignment="Top" Width="41" MouseLeftButtonUp="refreshCapt_MouseLeftButtonUp" Source="Resources/loader.gif"/>
 
     </Grid>
 </Window>
