--- a/LogWindow/AdminWindow.xaml
+++ b/LogWindow/AdminWindow.xaml
@@ -12,5 +12,6 @@
         <Button x:Name="useData" Content="Работа с данными" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,205,0,0" Height="35"/>
         <Button x:Name="makeReport" Content="Сформировать отчеты" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,245,0,0" Height="35"/>
         <Button x:Name="logHistory" Content="История входов" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,285,0,0" Height="35" Click="logHistory_Click"/>
+        <Image HorizontalAlignment="Left" Height="127" Margin="19,10,0,0" VerticalAlignment="Top" Width="137" Source="Resources/Администратор.png"/>
     </Grid>
 </Window>
