--- a/LogWindow/LaborantWindow.xaml
+++ b/LogWindow/LaborantWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Лаборант" Height="326.47" Width="354.878" Background="#FF76E383" FontFamily="Comic Sans MS">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="106" VerticalAlignment="Top" Width="104" Margin="32,9,0,0" Opacity="0.99" />
+        <Image HorizontalAlignment="Left" Height="120" VerticalAlignment="Top" Width="128" Margin="18,10,0,0" Opacity="0.99" Source="Resources/laborant_1.jpeg"/>
         <Label x:Name="nameUser" Content="" HorizontalAlignment="Left" Margin="173,23,0,0" VerticalAlignment="Top" Width="134" Background="White"/>
         <Label x:Name="workPost" Content="Лаборант" HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Center" Margin="191,63,0,0" Width="97" Background="White"/>
         <Button x:Name="reportUs" Content="Сформировать отчет" HorizontalAlignment="Left" VerticalAlignment="Top" Width="327" Margin="10,208,0,0" Height="35"/>
